--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@vkontakte/icons": "^1.102.0",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "google-map-react": "^2.1.9",
     "react": "^17.0.2",
@@ -15,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
